[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/components/dialog_system.gd" id="1_script"]

[node name="DialogSystem" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="DialogPanel" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -250.0
offset_right = -100.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="DialogPanel"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="DialogPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.4, 1)
text = "Speaker"

[node name="TextLabel" type="Label" parent="DialogPanel/VBox"]
layout_mode = 2
text = "Dialog text goes here..."
autowrap_mode = 3

[node name="ChoicesContainer" type="VBoxContainer" parent="DialogPanel/VBox"]
layout_mode = 2

[node name="ContinueLabel" type="Label" parent="DialogPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Click to continue..."
horizontal_alignment = 2
